--- a/src/app/courses/course-list.component.html
+++ b/src/app/courses/course-list.component.html
@@ -4,12 +4,12 @@
   <thead>
     <tr>
       <th>Image</th>
-      <th>Name</th>
-      <th>Price</th>
-      <th>Code</th>
-      <th>Rating</th>
-      <th>Realease Date</th>
-      <th>Options</th>
+      <th>Nome</th>
+      <th>Preço</th>
+      <th>Codigo</th>
+      <th>Avaliação</th>
+      <th>Data de Lançamento</th>
+      <th>Opções</th>
       </tr>
     </thead>
     <tbody>
